--- a/Android/pocket-chat/build.gradle
+++ b/Android/pocket-chat/build.gradle
@@ -1,19 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.kotlin_version = '1.3.21'
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-
-        
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
@@ -22,7 +22,7 @@ allprojects {
         jcenter()
         maven { url 'https://dl.bintray.com/pokt-network/pocket-android' }
         maven { url 'https://www.jitpack.io'}
-        
+
     }
 }
 
