--- a/JS/pocket-chat/package.json
+++ b/JS/pocket-chat/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/pokt-network/pocket-chat#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "pocket-js-aion": "0.0.1",
     "pug": "^2.0.3",
