--- a/ETH/JS/pocket-chat/package.json
+++ b/ETH/JS/pocket-chat/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
-    "pocket-js-aion": "0.0.1",
+    "pocket-js-eth": "0.0.2",
     "pug": "^2.0.3",
     "socket.io": "^2.2.0"
   }
