--- a/ETH/Android/pocket-chat/app/build.gradle
+++ b/ETH/Android/pocket-chat/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'network.pocket.android:aion:0.0.2'
+    implementation 'network.pocket.android:eth:0.0.2'
     implementation 'network.pocket.android:core:0.0.2'
 
 }
