--- a/ETH/Android/pocket-chat/local.properties
+++ b/ETH/Android/pocket-chat/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 30 14:46:21 AST 2019
-sdk.dir=/Users/pabelnunezl/Library/Android/sdk
+#Thu May 16 17:35:38 EDT 2019
+sdk.dir=/Users/jeremybeal/Library/Android/sdk
